final Zipper Commit, Changing Project Focus

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         -->
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="css/app.css">
+        <link rel="stylesheet" href="js/libs/Material/dist/css/materialize.min.css"/>
 
         <!--
         Inline JavaScript code is not allowed for privileged and certified apps,
@@ -28,6 +29,9 @@
         execute the deferred files.
         Read about defer: https://developer.mozilla.org/Web/HTML/Element/script#attr-defer
         -->
+        <script type="text/javascript" src="js/libs/jquery-2.1.3.min.js" defer></script>
+        <script type="text/javascript" src="js/libs/jquery.transit.min.js" defer></script>
+        <script type="text/javascript" src="js/libs/Material/dist/js/materialize.min.js" defer></script>
         <script type="text/javascript" src="js/app.js" defer></script>
 
         <!--
@@ -38,21 +42,34 @@
         <link rel="prefetch" type="application/l10n" href="data/locales.ini" />
         <script type="text/javascript" src="js/libs/l10n.js" defer></script>
     </head>
-    <body>
+    <body class="green darken-4">
+        <!--<section class="mainScreen"><img src="img/SplashScreen/splash.png" alt="splashscreen"/></section>-->
+
+        <header>
+            <!--NavBar-->
+            <nav class="top-nav green darken-2 waves-effect waves-light">
+                <div class="container">
+                    <div class="nav-wrapper center-align">
+                        <a class="page-title">Zipper</a>
+                    </div>
+                </div>
+            </nav>
+
+            <div class="container">
+                <a href="#" data-activates="slide-out" class="button-collapse top-nav full"><i class="mdi-navigation-menu"></i></a>
+            </div>
+
+            <ul id="slide-out" class="side-nav fixed green darken-2 collection with-header">
+                <li class="logo">
+                    <img id="front-page-logo" src="img/icons/background.svg" alt="logo"/>
+                </li>
+                <li class="collection-header">
+
+                </li>
+            </ul>
+        </header>
+
         <section>
-            <h1 data-l10n-id="app_title">Privileged app</h1>
-            <p data-l10n-id="app_description">This app demonstrates the usage of <code>XMLHttpRequest</code> and the <code>systemXHR</code> permission.</p>
-            <p id="error" hidden>...</p>
-            <form>
-              <!-- A placeholder attribute allows us to prefill the input box with some
-                text, so the user gets an idea of what sort of text they should enter
-                into that field. Once they start typing in something, the browser will
-                automatically remove the placeholder text. More info:
-                https://developer.mozilla.org/Web/HTML/Element/Input#attr-placeholder
-              -->
-              <input type="search" placeholder="javascript" id="term" /><button id="search" data-l10n-id="search">Search</button>
-            </form>
         </section>
-        <section id="results" hidden></section>
     </body>
 </html>
