Changed Project focus now doing an Record Audio App

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Privileged app</title>
+        <title>Mic</title>
         <meta name="description" content="A privileged app stub">
 
         <!--
@@ -50,7 +50,7 @@
             <nav class="top-nav green darken-2 waves-effect waves-light">
                 <div class="container">
                     <div class="nav-wrapper center-align">
-                        <a class="page-title">Zipper</a>
+                        <a class="page-title">Mic</a>
                     </div>
                 </div>
             </nav>
