--- a/index.html
+++ b/index.html
@@ -31,7 +31,18 @@
         -->
         <script type="text/javascript" src="js/libs/jquery-2.1.3.min.js" defer></script>
         <script type="text/javascript" src="js/libs/jquery.transit.min.js" defer></script>
+        <script type="text/javascript" src="js/libs/Hammer/hammer.min.js" defer></script>
+        <script type="text/javascript" src="js/libs/Hammer.jQuery/jquery.hammer.js" defer></script>
         <script type="text/javascript" src="js/libs/Material/dist/js/materialize.min.js" defer></script>
+
+        <script src="js/libs/WaveSufer/src/wavesurfer.js" defer></script>
+        <script src="js/libs/WaveSufer/src/webaudio.js" defer></script>
+        <script src="js/libs/WaveSufer/src/drawer.js" defer></script>
+        <script src="js/libs/WaveSufer/src/drawer.canvas.js" defer></script>
+        <script type="text/javascript" src="js/libs/WaveSufer/plugin/wavesurfer.microphone.js" defer></script>
+
+        <script type="text/javascript" src="js/libs/RecordRTC/RecordRTC.js" defer></script>
+        <script type="text/javascript" src="js/libs/Async/lib/async.js" defer></script>
         <script type="text/javascript" src="js/app.js" defer></script>
 
         <!--
@@ -69,7 +80,12 @@
             </ul>
         </header>
 
-        <section>
+        <section role="main">
+            <div class="container">
+                <div id="waveform"></div>
+
+                <a class="btn-floating btn-large waves-effect waves-light red" id="micBtn"><i class="mdi-av-mic"></i></a>
+            </div>
         </section>
     </body>
 </html>
