--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
             </ul>
         </header>
 
-        <section role="main">
+        <main>
             <div class="container">
                 <div class="row">
-                    <div class="col s12 m7">
+                    <div class="col s12">
                         <div class="card">
                             <div class="card-image">
                                 <div id="waveform"></div>
@@ -104,6 +104,6 @@
                 <li class="collection-header"><h4>Audios Recorded:</h4></li>
                 <li class="collection-item noRecords"><div>No Records Yet...</div></li>
             </ul>
-        </section>
+        </main>
     </body>
 </html>
