--- a/index.html
+++ b/index.html
@@ -31,9 +31,13 @@
         -->
         <script type="text/javascript" src="js/libs/jquery-2.1.3.min.js" defer></script>
         <script type="text/javascript" src="js/libs/jquery.transit.min.js" defer></script>
-        <script type="text/javascript" src="js/libs/Hammer/hammer.min.js" defer></script>
+
+        <script type="text/javascript" src="js/libs/Hammer/hammer.js" defer></script>
         <script type="text/javascript" src="js/libs/Hammer.jQuery/jquery.hammer.js" defer></script>
-        <script type="text/javascript" src="js/libs/Material/dist/js/materialize.min.js" defer></script>
+
+        <script type="text/javascript" src="js/libs/Dragend/dist/dragend.js" defer></script>
+
+        <script type="text/javascript" src="js/libs/Material/dist/js/materialize.js" defer></script>
 
         <script src="js/libs/WaveSufer/src/wavesurfer.js" defer></script>
         <script src="js/libs/WaveSufer/src/webaudio.js" defer></script>
@@ -42,7 +46,9 @@
         <script type="text/javascript" src="js/libs/WaveSufer/plugin/wavesurfer.microphone.js" defer></script>
 
         <script type="text/javascript" src="js/libs/MSR/MediaStreamRecorder-standalone.js" defer></script>
+
         <script type="text/javascript" src="js/libs/Async/lib/async.js" defer></script>
+
         <script type="text/javascript" src="js/app.js" defer></script>
 
         <!--
@@ -86,21 +92,36 @@
         </header>
 
         <main>
-            <div class="container row valign-wrapper record-container">
-                <div class="col s12 row valign">
-                    <div class="col s12">
-                        <div class="card deep-orange lighten-5" id="record">
-                            <div class="card-image">
-                                <div id="waveform"></div>
-                                <span class="card-title record-text">Start Recording</span>
-                            </div>
-                            <div class="card-content">
-                                TimeLine
-                            </div>
-                            <div class="card-action center-align">
-                                <a class="btn-floating btn-large waves-effect waves-light red darken-3 margin-zero" id="micBtn"><i class="mdi-av-mic"></i></a>
+            <div class="container row record-container">
+                <div class="dragend-page">
+                    <div class="row full-size valign-wrapper">
+                        <div class="col s12 row valign">
+                            <div class="col s12">
+                                <div class="card deep-orange lighten-5" id="record">
+                                    <div class="card-image">
+                                        <div id="waveform"></div>
+                                        <span class="card-title record-text">Start Recording</span>
+                                    </div>
+                                    <div class="card-content">
+                                        TimeLine
+                                    </div>
+                                    <div class="card-action center-align">
+                                        <a class="btn-floating btn-large waves-effect waves-light red darken-3 margin-zero" id="micBtn"><i class="mdi-av-mic"></i></a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+
+                <div class="dragend-page">
+                    <div class="row col s12">
+                        <ul class="col s12 collapsible audioList" data-collapsible="accordion">
+                            <li class="noRecord">
+                                <div class="collapsible-header"><i class="mdi-av-not-interested"></i>No Records Yet...</div>
+                                <div class="collapsible-body"><p>Record something and it will show up here</p></div>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
